SFQBD/Ebiz/force-app/main/default/objects/Order/fields/EBizCharge_Division_ID__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Division_ID__c</fullName>
    <label>EBizCharge Division ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>