SFQBD/Ebiz/force-app/main/default/objects/Order/fields/EBizCharge_Need_to_Sync__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Need_to_Sync__c</fullName>
    <formula>IF( ISBLANK( EBizCharge_Last_Sync_Date__c) || LastModifiedDate &gt; EBizCharge_Last_Sync_Date__c, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBizCharge Need to Sync</label>
    <type>Checkbox</type>
</CustomField>