SFQBD/Ebiz/force-app/main/default/objects/Order/fields/EbizCharge_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Order_Amount__c</fullName>
    <formula>TotalAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EbizCharge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>