SFQBD/Ebiz/force-app/main/default/objects/Order/fields/EBizCharge_Order_Balance__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Order_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EBizCharge Order Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>