SFQBD/Ebiz/force-app/main/default/objects/Order/fields/EBizCharge_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Order_Number__c</fullName>
    <label>EBizCharge Order Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>