SFQBD/Ebiz/force-app/main/default/objects/Order/fields/EBizCharge_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Order_Status__c</fullName>
    <label>EBizCharge Order Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>