SFQBD/Ebiz/force-app/main/default/objects/Order/fields/EBizCharge_Order_Tax__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Order_Tax__c</fullName>
    <label>EBizCharge Order Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>