SFQBD/Ebiz/force-app/main/default/objects/Order/fields/EBizCharge_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Payment_Status__c</fullName>
    <label>EBizCharge Payment Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>