SFQBD/Ebiz/force-app/main/default/objects/Order/fields/EBizCharge_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Reference_Number__c</fullName>
    <label>EBizCharge Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>