SFQBD/Ebiz/force-app/main/default/objects/Order/fields/IsUpdatedFromGateway__c.field-meta.xml
<CustomField>
    <fullName>IsUpdatedFromGateway__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Updated From Gateway</label>
    <type>Checkbox</type>
</CustomField>